--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
 	<string name="preferred_location">Location</string>
 	<string name="send_to">Share text to..</string>
 	<string name="title_activity_main_activity2">MainActivity2Activity</string>
+	<string name="pref_units_key">pref_units_key</string>
+	<string name="pref_units_metric">metric</string>
+	<string name="pref_units_imperial">imperial</string>
 
 
 </resources>
